Fix dark mode background in bom only mode

--- a/InteractiveHtmlBom/web/ibom.css
+++ b/InteractiveHtmlBom/web/ibom.css
@@ -610,6 +610,7 @@ mark.highlight {
   width: 100%;
   background-color: white;
   transition: background-color 0.3s;
+  min-height: 100%;
 }
 
 #top {
